# quagmire

./: .dockerignore  .gitignore  CONTRIBUTING.md  Changelog.md  Dockerfile  MANIFEST.in  README.md  ToDo.md  __init__.py  build-dockerfile.sh  build-wrapper-dockerfile.sh  documentation.html  gh-pages  gh-pages.pub  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/: python_conda_build_test.yml  python_conda_upload.yml  python_pypi_upload_macos_wheel.yml  python_pypi_upload_mlinux_wheel.yml  python_pypi_upload_windows_wheel.yml
0.9.5/: FrontPage.html  search.html  searchindex.js
0.9.5b1/: genindex.html  searchindex.js
0.9.5b1_api/: documentation.html  index.html
0.9.6b1/: .buildinfo  FrontPage.html  genindex.html  objects.inv  search.html  searchindex.js
Docker/: Dockerfile  Dockerfile-base  Dockerfile-binder
Notebooks/: 0-StartHere.ipynb  Australian coastline-ETOPO1.ipynb  Australian coastline.ipynb  ETOPO1-workflow.ipynb  LiveViz-Lavavu.ipynb  PixMeshLandscape.ipynb  PixMeshLandscape.py  PixMeshOctoPants.ipynb  RBF Smoothing and Gradients.ipynb  Read-hdf5-mesh.ipynb  Rosenbrock landscape.ipynb  TriMeshOctoPants.ipynb  Untitled.ipynb  _Obsolete_Matplotlib3Dplots.ipynb  cumulative flow.ipynb  erosion - deposition models.ipynb  poisson disc sampling.ipynb  visualisation with LavaVu.ipynb
Scripts/: AusDEM2.py  AusETOPO.py  ETOPO1-workflow.py  EggBoxFlow.py  Low_points.py  NZETOPO1.py  Read-hdf5-mesh.py  TriMeshOctoPants.py  TrimeshLandscape.py
Sympy/: sympy_physics.py  sympy_testing.py
binder/: environment.yml
conda/: bld.bat  meta.yaml  (+1 more)
(+714 files in other folders)
