[aliases]
test=pytest

[bdist_wheel]

# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.

universal=0

[metadata]
description-file = README.md

[tool:pytest]

python_files =
    tests/test*.py

# Note pytest with notebook plugin:
#   conda install -c conda-forge pytest-notebook

nb_test_files=0
testpaths = 
    # tests/test*ipynb
    tests/test*{py, ipynb}
    
# The unit tests in a notebook - run it and check that it still produces the 
# same result as is checked in ! Very simple but unlikely to work for complex examples.
# This is probably most helpful for testing notebook-specific code rather than checking
# that the notebooks all run.

